
message C2SInviteFriendRecevieBox {//好友邀请领取宝箱
	required int64  feelbackId       = 1[default = 0];//回馈人id
	required int32  level		= 2[default = 0];//最高关卡
}

message S2CInviteFriendRecevieBox {
	optional int32 isRecevie	 	= 1;	// 领取宝箱  1成功0失败2等级不够
}

message C2SInviteFriendBack {//回馈邀请人
	required int64  inviteId       = 1;//邀请人id
}

message S2CInviteFriendBack {//回馈邀请人
	optional int32 inviteStatus	 	= 1;//回馈状态1成功0失败2ID不存在3已回馈过好友
}

message S2CInviteFriendList {//回馈列表
	optional int32 isFeelback	 	= 1;//是否回馈过好友1是0否
	repeated InviteFriendInfo inviteList= 2; 	// 查到的公会列表
}

message InviteFriendInfo {//回馈列表
	optional int32 index			= 1;//回馈人序号
	optional int64 feedbackId	 	= 2;//回馈人ID
	optional int32 level	 	    = 3;//最高关卡
	optional int32 isReceive	 	= 4;//领取过的宝箱
	optional string icon	 	    = 5;//玩家头像ID, 或头像URL
	optional int32 iconType	 	    = 6;//玩家头像类型, 按位区分0位-为武将ID, 1位-为玩家URL, 2位-取得过PVP排名第一
	optional int32 loginType		= 7;//登陆方式
}

// 获取邀请平台好友信息
message C2SGetPlatInviteInfo {	//cmd=INVITE_PLAT_GET_INFO
}  
message S2CGetPlatInviteInfo {
	required int32 inviteCount		= 1;//今日的邀请总数
	required int32 rewardState		= 2;//奖励状态 0-未领取奖励 1-领取部分奖励 2-全部领取奖励(明日再来)
}

// 同步邀请平台好友列表
message C2SSyncPlatInviteList {	//cmd=INVITE_PLAT_SYNC_LIST
	repeated string openIds 		= 1;//平台好友ID列表(本次的邀请的好友列表)
	required int32 friendTotal		= 2;//好友总数（用于判断是否全部邀请了）
}
message S2CSyncPlatInviteList {
	required int32 inviteCount		= 1;//今日邀请次数
	required int32 rewardState		= 2;//奖励状态 0-未领取奖励 1-领取部分奖励 2-全部领取奖励(明日再来)
}

// 领取邀请平台好友奖励
message C2SGetPlatInviteReward { //cmd=INVITE_PLAT_GET_REWARD
}
message S2CGetPlatInviteReward {
	required int32 inviteCount		= 1;//今日邀请次数
	required int32 rewardState		= 2;//奖励状态 0-未领取奖励 1-领取部分奖励 2-全部领取奖励(明日再来)
}

// 邀请平台好友成功列表(不用请求，登陆时服务器推送)
message S2CInviteSuccessList {	//cmd=INVITE_PLAT_SUCCESS_LIST
	 repeated string friendNames 	= 1;//邀请成功好友列表 
}

// 领取邀请好友成功后的奖励
message C2SGetInviteSuccessReward { //cmd=INVITE_PLAT_SUCCESS_REWARD
}
message S2CGetInviteSuccessReward {
	required int32 result			= 1;//领取结果 0-领取失败 1-领取成功 
	required int32 gold				= 2;//领取金币数量
}
// 领取邀请微信好友成功后的奖励
message C2SGetWXInviteSuccessReward { //cmd=INVITE_WX_SUCCESS_REWARD

}
message S2CGetWXInviteSuccessReward {
	required int32 result			= 1;//领取结果 0-领取失败 1-领取成功
	optional int32 itemId				= 2;//领取道具ID
	optional int32 itemNum				= 3;//领取道具数量
	optional int32 count				= 4;//已领奖次数
}

